<resources>
    <string name="app_name">Premier League Live</string>
    <string name="Hello">Witaj!</string>
    <string name="Table">Tabela</string>
    <string name="change_textview">change textview</string>
    <string name="ExampleClub">Club</string>
    <string name="ExamplePlayed">P</string>
    <string name="ExampleWon">W</string>
    <string name="ExampleDrawn">D</string>
    <string name="ExampleLost">L</string>
    <string name="ExampleScored">S</string>
    <string name="ExampleConceded">C</string>
    <string name="ExampleDifference">D</string>
    <string name="ExamplePoints">PTS</string>
    <string name="epl_table">Tabela ligi</string>
    <string name="Club">Klub</string>
    <string name="Played">M</string>
    <string name="Won">W</string>
    <string name="Drawn">R</string>
    <string name="Lost">P</string>
    <string name="Scored">Z</string>
    <string name="Conceded">S</string>
    <string name="Difference">B</string>
    <string name="Points">PKT</string>
    <string name="ExamplePosition">20</string>
    <string name="Stats">Statystyki</string>
    <string name="FavClub">Sprawdź losową kadrę</string>
    <string name="Scorers">Strzelcy</string>
    <string name="YellowCards">Żółte kartki</string>
    <string name="Saves">Obrony</string>
    <string name="Assistants">Asystenci</string>
    <string name="RedCards">Czerwone kartki</string>
    <string name="CleanSheets">Czyste konta</string>
    <string name="ChooseCategory">Wybierz kategorię</string>
    <string name="ExampleTop">Top</string>
    <string name="ExamplePlayer">Alex Oxlade-Chamberlain</string>
    <string name="ExampleNumber">, #23</string>
    <string name="ExampleScore">9</string>
    <string name="topScorers">Najlepsi strzelcy</string>
    <string name="topAssistants">Najlepsi asystenci</string>
    <string name="mostYellow">Najwięcej żółtych kartek</string>
    <string name="mostRed">Najwięcej czerwonych kartek</string>
    <string name="mostSaves">Najwięcej obron</string>
    <string name="mostCleanSheets">Najwięcej czystych kont</string>
    <string name="Player">Gracz</string>
    <string name="Score">Wynik</string>
    <string name="FavClubTrue">Oto ostatnio wylosowany klub! Potrząśnij, by wylosować nowy.</string>
    <string name="FavClubFalse">Nie losowałeś jeszcze klubu. Potrząśnij telefonem!</string>
    <string name="ExampleDate">14/01/2017 17:00</string>
    <string name="ExampleMatchScore">4-3</string>
    <string name="ExampleHome">Liverpool</string>
    <string name="ExampleAway">Man City</string>
    <string name="Schedule">Terminarz</string>
    <string name="GameweekString">Kolejka</string>
    <string name="ExampleGameweek">23</string>
    <string name="Previous"><![CDATA[<<]]></string>
    <string name="Next"><![CDATA[>>]]></string>
    <string name="ExamplePosition2">bramkarz</string>
    <string name="Goalkeeper">bramkarz</string>
    <string name="Defender">obrońca</string>
    <string name="Midfielder">pomocnik</string>
    <string name="Forward">napastnik</string>
    <string name="Goals">Gole</string>
    <string name="Assists">Asysty</string>
</resources>
