<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.artur.epllive.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/DP20"/>

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/DP40"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/epl_logo"/>

    <Button
        android:layout_below="@id/toolbar"
        android:id="@+id/tableActivityButton"
        android:background="@drawable/button_hold"
        android:text="@string/Table"
        android:textSize="@dimen/DP16"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/DP160"
        android:layout_height="@dimen/DP80"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/statsActivityButton"
        android:background="@drawable/button_hold"
        android:text="@string/Stats"
        android:textSize="@dimen/DP16"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP80"
        android:layout_below="@id/tableActivityButton"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/favClubActivityButton"
        android:background="@drawable/button_hold"
        android:text="@string/FavClub"
        android:textSize="@dimen/DP16"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP80"
        android:layout_below="@id/statsActivityButton"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/scheduleActivityButton"
        android:background="@drawable/button_hold"
        android:text="@string/Schedule"
        android:textSize="@dimen/DP16"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP80"
        android:layout_below="@id/favClubActivityButton"
        style="?android:attr/borderlessButtonStyle"/>

</RelativeLayout>
